# co-commit

./: Cargo.toml
src/: args.rs  commit.rs  main.rs
