[package]
name = "co-commit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
env_logger = "0.10.0"
log = "0.4.17"
openai-api = "0.1.4"
question = "0.2.2"
spinners = "4.1.0"
tokio = { version = "0.2", features = ["full"] }
